--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <th scope="col">#</th>
             <th scope="col">Item</th>
             <th scope="col">Cantidad</th>
-            <th scope="col">Acción</th>
+            <th scope="col">Accion</th>
             <th scope="col">Total</th>
           </tr>
         </thead>
