--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Productos</h1>
+      <hr>
+      <h1>Tienda Dulce</h1>
+      <hr>
+      <h1>Especialidades</h1>
       <hr />
       <!-- acá se van a pintar las cards -->
       <div class="row" id="cards"></div>
@@ -48,7 +51,7 @@
           <div class="card-body">
             <h4>Titulo</h4>
             <p>Precio</p>
-            <button class="btn btn-dark">Comprar</button>
+            <button class="btn btn-success">Agregar al Carrito</button>
           </div>
         </div>
       </div>
@@ -70,16 +73,20 @@
 
     <!-- TOTAL PRODUCTOS -->
     <template id="template-footer">
-      <th scope="row" colspan="2">Total Productos</th>
+      <th scope="row" colspan="2">Total de Productos:</th>
       <td>10</td>
       <td>
         <button class="btn btn-danger btn-sm" id="vaciar-carrito">
           Vaciar Carrito
         </button>
+        <button class="btn btn-warning btn-sm" id="finalizar-compra">
+          Finalizar Compra
+        </button>
       </td>
       <td class="font-weight-bold">$ <span>5000</span></td>
     </template>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="app.js"></script>
   </body>
 </html>
